--- a/AgileWallaby.Ehcache.Test.Net4/AgileWallaby.Ehcache.Test.Net4.csproj
+++ b/AgileWallaby.Ehcache.Test.Net4/AgileWallaby.Ehcache.Test.Net4.csproj
@@ -3,15 +3,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
+    <ProductVersion>
+    </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{CA2AC6DD-B7AC-47AF-87BC-3284BD194BDA}</ProjectGuid>
+    <ProjectGuid>{87F26C33-3BAF-466A-BD9E-1B1A8BE7002E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AgileWallaby.Ehcache.Net2</RootNamespace>
-    <AssemblyName>AgileWallaby.Ehcache.Net2</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <RootNamespace>AgileWallaby.Ehcache.Test.Net4</RootNamespace>
+    <AssemblyName>AgileWallaby.Ehcache.Test.Net4</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,24 +33,32 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Runtime.Caching" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CacheServerException.cs" />
-    <Compile Include="EhcacheServerDictionary.cs" />
-    <Compile Include="EhcacheServerRequest.cs" />
-    <Compile Include="IEhcacheServerRequest.cs" />
-    <Compile Include="IMetadataSerializationService.cs" />
-    <Compile Include="ISerializer.cs" />
-    <Compile Include="Metadata.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringSerializer.cs" />
-    <Compile Include="XmlMetadataSerializationService.cs" />
-    <Compile Include="XmlSerializer.cs" />
+    <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
+      <Visible>False</Visible>
+    </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Compile Include="..\AgileWallaby.Ehcache.Net2.Test\EhcacheServerDictionaryTest.cs">
+      <Link>EhcacheServerDictionaryTest.cs</Link>
+    </Compile>
+    <Compile Include="EhcacheServerCacheTest.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AgileWallaby.Ehcache\AgileWallaby.Ehcache.Net4.csproj">
+      <Project>{77790A66-4230-4330-AF9F-68E8DE70F13A}</Project>
+      <Name>AgileWallaby.Ehcache.Net4</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
