--- a/AgileWallaby.Ehcache.Silverlight/AgileWallaby.Ehcache.Silverlight.csproj
+++ b/AgileWallaby.Ehcache.Silverlight/AgileWallaby.Ehcache.Silverlight.csproj
@@ -55,20 +55,31 @@
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AgileWallaby.Ehcache.Net2\CacheServerException.cs">
+      <Link>CacheServerException.cs</Link>
+    </Compile>
     <Compile Include="..\AgileWallaby.Ehcache.Net2\EhcacheServerDictionary.cs">
       <Link>EhcacheServerDictionary.cs</Link>
-    </Compile>
-    <Compile Include="..\AgileWallaby.Ehcache.Net2\EhcacheServerRequest.cs">
-      <Link>EhcacheServerRequest.cs</Link>
     </Compile>
     <Compile Include="..\AgileWallaby.Ehcache.Net2\IEhcacheServerRequest.cs">
       <Link>IEhcacheServerRequest.cs</Link>
     </Compile>
+    <Compile Include="..\AgileWallaby.Ehcache.Net2\IMetadataSerializationService.cs">
+      <Link>IMetadataSerializationService.cs</Link>
+    </Compile>
+    <Compile Include="..\AgileWallaby.Ehcache.Net2\ISerializer.cs">
+      <Link>ISerializer.cs</Link>
+    </Compile>
     <Compile Include="..\AgileWallaby.Ehcache.Net2\Metadata.cs">
       <Link>Metadata.cs</Link>
     </Compile>
+    <Compile Include="..\AgileWallaby.Ehcache.Net2\StringSerializer.cs">
+      <Link>StringSerializer.cs</Link>
+    </Compile>
+    <Compile Include="EhcacheServerRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SerializerServiceFactory.cs" />
+    <Compile Include="XmlMetadataSerializationService.cs" />
+    <Compile Include="XmlSerializer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <ProjectExtensions>
