--- a/AgileWallaby.Ehcache.Test.Net4/AgileWallaby.Ehcache.Test.Net4.csproj
+++ b/AgileWallaby.Ehcache.Test.Net4/AgileWallaby.Ehcache.Test.Net4.csproj
@@ -39,6 +39,7 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -50,7 +51,9 @@
       <Link>EhcacheServerDictionaryTest.cs</Link>
     </Compile>
     <Compile Include="EhcacheServerCacheTest.cs" />
+    <Compile Include="JsonSerializerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestContract.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AgileWallaby.Ehcache\AgileWallaby.Ehcache.Net4.csproj">
