--- a/AgileWallaby.Ehcache.Test/AgileWallaby.Ehcache.Test.Net2.csproj
+++ b/AgileWallaby.Ehcache.Test/AgileWallaby.Ehcache.Test.Net2.csproj
@@ -48,6 +48,9 @@
   <ItemGroup>
     <Compile Include="EhcacheServerDictionaryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringSerializerTest.cs" />
+    <Compile Include="TestObject.cs" />
+    <Compile Include="XmlSerializerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AgileWallaby.Ehcache.Net2\AgileWallaby.Ehcache.Net2.csproj">
